[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-webcam-cfork"
version = "0.0.1"
description = "Fork of reflex-webcam"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Benjamin-Lee Britton", email = "benjamin@benjaminbritton.co.uk" }]
keywords = [
    "reflex",
    "reflex-custom-components"]

dependencies = [
    "reflex>=0.5.0"
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]
